6349420/Oberon0/antlr-generated/ar/oberon0/parser/Oberon0Parser.java
// $ANTLR 3.3 Nov 30, 2010 12:45:30 D:\\DropBox\\My Dropbox\\UVA\\SC\\Workspac\\Oberon0\\src\\ar\\oberon0\\grammar\\Oberon0.g 2011-02-14 20:52:07

  package ar.oberon0.parser;
  import ar.oberon0.ast.*;
  import ar.oberon0.ast.dataTypes.*;
  import ar.oberon0.ast.declarations.*;
  import ar.oberon0.ast.expression.*;
  import ar.oberon0.ast.statements.*;
  import ar.oberon0.lists.*;
  import ar.oberon0.runtime.*;
  import ar.oberon0.shared.*;
  import ar.oberon0.values.*;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

public class Oberon0Parser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "IDENT", "INTEGER", "LETTER", "DIGIT", "WS", "'.'", "'['", "']'", "'('", "')'", "'~'", "'*'", "'DIV'", "'MOD'", "'&'", "'+'", "'-'", "'OR'", "'='", "'#'", "'<'", "'<='", "'>'", "'>='", "':='", "','", "'IF'", "'THEN'", "'ELSIF'", "'ELSE'", "'END'", "'WHILE'", "'DO'", "';'", "'ARRAY'", "'OF'", "':'", "'RECORD'", "'VAR'", "'PROCEDURE'", "'BEGIN'", "'CONST'", "'TYPE'", "'MODULE'", "'WITH'", "'Write'", "'(\"'", "'\")'", "'WriteLn'", "'Read'"
    };
    public static final int EOF=-1;
    public static final int T__9=9;
    public static final int T__10=10;
    public static final int T__11=11;
    public static final int T__12=12;
    public static final int T__13=13;
    public static final int T__14=14;
    public static final int T__15=15;
    public static final int T__16=16;
    public static final int T__17=17;
    public static final int T__18=18;
    public static final int T__19=19;
    public static final int T__20=20;
    public static final int T__21=21;
    public static final int T__22=22;
    public static final int T__23=23;
    public static final int T__24=24;
    public static final int T__25=25;
    public static final int T__26=26;
    public static final int T__27=27;
    public static final int T__28=28;
    public static final int T__29=29;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int T__50=50;
    public static final int T__51=51;
    public static final int T__52=52;
    public static final int T__53=53;
    public static final int IDENT=4;
    public static final int INTEGER=5;
    public static final int LETTER=6;
    public static final int DIGIT=7;
    public static final int WS=8;

    // delegates
    // delegators


        public Oberon0Parser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public Oberon0Parser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return Oberon0Parser.tokenNames; }
    public String getGrammarFileName() { return "D:\\DropBox\\My Dropbox\\UVA\\SC\\Workspac\\Oberon0\\src\\ar\\oberon0\\grammar\\Oberon0.g"; }


    public static class selector_return extends ParserRuleReturnScope {
        public SelectorNode selector;
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "selector"
    // D:\\DropBox\\My Dropbox\\UVA\\SC\\Workspac\\Oberon0\\src\\ar\\oberon0\\grammar\\Oberon0.g:25:1: selector[SelectorNode selectorIn] returns [SelectorNode selector] : ( '.' IDENT | '[' expression ']' )* ;
    public final Oberon0Parser.selector_return selector(SelectorNode selectorIn) throws RecognitionException {
        Oberon0Parser.selector_return retval = new Oberon0Parser.selector_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token char_literal1=null;
        Token IDENT2=null;
        Token char_literal3=null;
        Token char_literal5=null;
        Oberon0Parser.expression_return expression4 = null;


        Object char_literal1_tree=null;
        Object IDENT2_tree=null;
        Object char_literal3_tree=null;
        Object char_literal5_tree=null;

        SelectorNode tempSelector = selectorIn;
        try {
            // D:\\DropBox\\My Dropbox\\UVA\\SC\\Workspac\\Oberon0\\src\\ar\\oberon0\\grammar\\Oberon0.g:27:2: ( ( '.' IDENT | '[' expression ']' )* )
            // D:\\DropBox\\My Dropbox\\UVA\\SC\\Workspac\\Oberon0\\src\\ar\\oberon0\\grammar\\Oberon0.g:28:3: ( '.' IDENT | '[' expression ']' )*
            {
            root_0 = (Object)adaptor.nil();

            // D:\\DropBox\\My Dropbox\\UVA\\SC\\Workspac\\Oberon0\\src\\ar\\oberon0\\grammar\\Oberon0.g:28:3: ( '.' IDENT | '[' expression ']' )*
            loop1:
            do {
                int alt1=3;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==9) ) {
                    alt1=1;
                }
                else if ( (LA1_0==10) ) {
                    alt1=2;
                }


                switch (alt1) {
            	case 1 :
            	    // D:\\DropBox\\My Dropbox\\UVA\\SC\\Workspac\\Oberon0\\src\\ar\\oberon0\\grammar\\Oberon0.g:28:5: '.' IDENT
            	    {
            	    char_literal1=(Token)match(input,9,FOLLOW_9_in_selector73); 
            	    char_literal1_tree = (Object)adaptor.create(char_literal1);
            	    adaptor.addChild(root_0, char_literal1_tree);

            	    IDENT2=(Token)match(input,IDENT,FOLLOW_IDENT_in_selector75); 
            	    IDENT2_tree = (Object)adaptor.create(IDENT2);
            	    adaptor.addChild(root_0, IDENT2_tree);

            	    tempSelector.setNextNode(new RecordSelectorNode(IDENT2.getText())); tempSelector = tempSelector.getNextNode();

            	    }
            	    break;
            	case 2 :
            	    // D:\\DropBox\\My Dropbox\\UVA\\SC\\Workspac\\Oberon0\\src\\ar\\oberon0\\grammar\\Oberon0.g:29:6: '[' expression ']'
            	    {
            	    char_literal3=(Token)match(input,10,FOLLOW_10_in_selector95); 
            	    char_literal3_tree = (Object)adaptor.create(char_literal3);
            	    adaptor.addChild(root_0, char_literal3_tree);

            	    pushFollow(FOLLOW_expression_in_selector97);
            	    expression4=expression();

            	    state._fsp--;

            	    adaptor.addChild(root_0, expression4.getTree());
            	    char_literal5=(Token)match(input,11,FOLLOW_11_in_selector99); 
            	    char_literal5_tree = (Object)adaptor.create(char_literal5);
            	    adaptor.addChild(root_0, char_literal5_tree);

            	    tempSelector.setNextNode(new ArrayItemSelectorNode((expression4!=null?expression4.expression:null))); tempSelector = tempSelector.getNextNode();

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);

            retval.selector = selectorIn;

            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "selector"

    public static class factor_return extends ParserRuleReturnScope {
        public Interpretable factor;
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "factor"
    // D:\\DropBox\\My Dropbox\\UVA\\SC\\Workspac\\Oberon0\\src\\ar\\oberon0\\grammar\\Oberon0.g:34:1: factor returns [Interpretable factor] : ( IDENT selector[selector] | INTEGER | '(' expression ')' | '~' negatedFactor= factor );
    public final Oberon0Parser.factor_return factor() throws RecognitionException {
        Oberon0Parser.factor_return retval = new Oberon0Parser.factor_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token IDENT6=null;
        Token INTEGER8=null;
        Token char_literal9=null;
        Token char_literal11=null;
        Token char_literal12=null;
        Oberon0Parser.factor_return negatedFactor = null;

        Oberon0Parser.selector_return selector7 = null;

        Oberon0Parser.expression_return expression10 = null;


        Object IDENT6_tree=null;
        Object INTEGER8_tree=null;
        Object char_literal9_tree=null;
        Object char_literal11_tree=null;
        Object char_literal12_tree=null;

        try {
            // D:\\DropBox\\My Dropbox\\UVA\\SC\\Workspac\\Oberon0\\src\\ar\\oberon0\\grammar\\Oberon0.g:35:2: ( IDENT selector[selector] | INTEGER | '(' expression ')' | '~' negatedFactor= factor )
            int alt2=4;
            switch ( input.LA(1) ) {
            case IDENT:
                {
                alt2=1;
                }
                break;
            case INTEGER:
                {
                alt2=2;
                }
                break;
            case 12:
                {
                alt2=3;
                }
                break;
            case 14:
                {
                alt2=4;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;
            }

            switch (alt2) {
                case 1 :
                    // D:\\DropBox\\My Dropbox\\UVA\\SC\\Workspac\\Oberon0\\src\\ar\\oberon0\\grammar\\Oberon0.g:35:4: IDENT selector[selector]
                    {
                    root_0 = (Object)adaptor.nil();

                    IDENT6=(Token)match(input,IDENT,FOLLOW_IDENT_in_factor149); 
                    IDENT6_tree = (Object)adaptor.create(IDENT6);
                    adaptor.addChild(root_0, IDENT6_tree);

                    VarSelectorNode selector = new VarSelectorNode(IDENT6.getText());
                    pushFollow(FOLLOW_selector_in_factor168);
                    selector7=selector(selector);

                    state._fsp--;

                    adaptor.addChild(root_0, selector7.getTree());
                    retval.factor = selector;

                    }
                    break;
                case 2 :
                    // D:\\DropBox\\My Dropbox\\UVA\\SC\\Workspac\\Oberon0\\src\\ar\\oberon0\\grammar\\Oberon0.g:37:5: INTEGER
                    {
                    root_0 = (Object)adaptor.nil();

                    INTEGER8=(Token)match(input,INTEGER,FOLLOW_INTEGER_in_factor186); 
                    INTEGER8_tree = (Object)adaptor.create(INTEGER8);
                    adaptor.addChild(root_0, INTEGER8_tree);

                    retval.factor = new IntegerValue(Integer.parseInt(INTEGER8.getText()));

                    }
                    break;
                case 3 :
                    // D:\\DropBox\\My Dropbox\\UVA\\SC\\Workspac\\Oberon0\\src\\ar\\oberon0\\grammar\\Oberon0.g:38:5: '(' expression ')'
                    {
                    root_0 = (Object)adaptor.nil();

                    char_literal9=(Token)match(input,12,FOLLOW_12_in_factor206); 
                    char_literal9_tree = (Object)adaptor.create(char_literal9);
                    adaptor.addChild(root_0, char_literal9_tree);

                    pushFollow(FOLLOW_expression_in_factor208);
                    expression10=expression();

                    state._fsp--;

                    adaptor.addChild(root_0, expression10.getTree());
                    char_literal11=(Token)match(input,13,FOLLOW_13_in_factor210); 
                    char_literal11_tree = (Object)adaptor.create(char_literal11);
                    adaptor.addChild(root_0, char_literal11_tree);

                    retval.factor = (expression10!=null?expression10.expression:null);

                    }
                    break;
                case 4 :
                    // D:\\DropBox\\My Dropbox\\UVA\\SC\\Workspac\\Oberon0\\src\\ar\\oberon0\\grammar\\Oberon0.g:39:5: '~' negatedFactor= factor
                    {
                    root_0 = (Object)adaptor.nil();

                    char_literal12=(Token)match(input,14,FOLLOW_14_in_factor229); 
                    char_literal12_tree = (Object)adaptor.create(char_literal12);
                    adaptor.addChild(root_0, char_literal12_tree);

                    pushFollow(FOLLOW_factor_in_factor233);
                    negatedFactor=factor();

                    state._fsp--;

                    adaptor.addChild(root_0, negatedFactor.getTree());
                    retval.factor = new NegationNode((negatedFactor!=null?negatedFactor.factor:null));

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "factor"

    public static class term_return extends ParserRuleReturnScope {
        public Interpretable term;
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "term"
    // D:\\DropBox\\My Dropbox\\UVA\\SC\\Workspac\\Oberon0\\src\\ar\\oberon0\\grammar\\Oberon0.g:44:1: term returns [Interpretable term] : left= factor ( ( '*' right= factor | 'DIV' right= factor | 'MOD' right= factor | '&' right= factor )* ) ;
    public final Oberon0Parser.term_return term() throws RecognitionException {
        Oberon0Parser.term_return retval = new Oberon0Parser.term_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token char_literal13=null;
        Token string_literal14=null;
        Token string_literal15=null;
        Token char_literal16=null;
        Oberon0Parser.factor_return left = null;

        Oberon0Parser.factor_return right = null;


        Object char_literal13_tree=null;
        Object string_literal14_tree=null;
        Object string_literal15_tree=null;
        Object char_literal16_tree=null;

        try {
            // D:\\DropBox\\My Dropbox\\UVA\\SC\\Workspac\\Oberon0\\src\\ar\\oberon0\\grammar\\Oberon0.g:45:2: (left= factor ( ( '*' right= factor | 'DIV' right= factor | 'MOD' right= factor | '&' right= factor )* ) )
            // D:\\DropBox\\My Dropbox\\UVA\\SC\\Workspac\\Oberon0\\src\\ar\\oberon0\\grammar\\Oberon0.g:45:4: left= factor ( ( '*' right= factor | 'DIV' right= factor | 'MOD' right= factor | '&' right= factor )* )
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_factor_in_term263);
            left=factor();

            state._fsp--;

            adaptor.addChild(root_0, left.getTree());
            retval.term = (left!=null?left.factor:null);
            // D:\\DropBox\\My Dropbox\\UVA\\SC\\Workspac\\Oberon0\\src\\ar\\oberon0\\grammar\\Oberon0.g:46:3: ( ( '*' right= factor | 'DIV' right= factor | 'MOD' right= factor | '&' right= factor )* )
            // D:\\DropBox\\My Dropbox\\UVA\\SC\\Workspac\\Oberon0\\src\\ar\\oberon0\\grammar\\Oberon0.g:47:4: ( '*' right= factor | 'DIV' right= factor | 'MOD' right= factor | '&' right= factor )*
            {
            // D:\\DropBox\\My Dropbox\\UVA\\SC\\Workspac\\Oberon0\\src\\ar\\oberon0\\grammar\\Oberon0.g:47:4: ( '*' right= factor | 'DIV' right= factor | 'MOD' right= factor | '&' right= factor )*
            loop3:
            do {
                int alt3=5;
                switch ( input.LA(1) ) {
                case 15:
                    {
                    alt3=1;
                    }
                    break;
                case 16:
                    {
                    alt3=2;
                    }
                    break;
                case 17:
                    {
                    alt3=3;
                    }
                    break;
                case 18:
                    {
                    alt3=4;
                    }
                    break;

                }

                switch (alt3) {
            	case 1 :
            	    // D:\\DropBox\\My Dropbox\\UVA\\SC\\Workspac\\Oberon0\\src\\ar\\oberon0\\grammar\\Oberon0.g:47:6: '*' right= factor
            	    {
            	    char_literal13=(Token)match(input,15,FOLLOW_15_in_term288); 
            	    char_literal13_tree = (Object)adaptor.create(char_literal13);
            	    adaptor.addChild(root_0, char_literal13_tree);

            	    pushFollow(FOLLOW_factor_in_term293);
            	    right=factor();

            	    state._fsp--;

            	    adaptor.addChild(root_0, right.getTree());
            	    retval.term = new MultNode(retval.term, (right!=null?right.factor:null));

            	    }
            	    break;
            	case 2 :
            	    // D:\\DropBox\\My Dropbox\\UVA\\SC\\Workspac\\Oberon0\\src\\ar\\oberon0\\grammar\\Oberon0.g:48:7: 'DIV' right= factor
            	    {
            	    string_literal14=(Token)match(input,16,FOLLOW_16_in_term309); 
            	    string_literal14_tree = (Object)adaptor.create(string_literal14);
            	    adaptor.addChild(root_0, string_literal14_tree);

            	    pushFollow(FOLLOW_factor_in_term313);
            	    right=factor();

            	    state._fsp--;

            	    adaptor.addChild(root_0, right.getTree());
            	    retval.term = new DivNode(retval.term, (right!=null?right.factor:null));

            	    }
            	    break;
            	case 3 :
            	    // D:\\DropBox\\My Dropbox\\UVA\\SC\\Workspac\\Oberon0\\src\\ar\\oberon0\\grammar\\Oberon0.g:49:7: 'MOD' right= factor
            	    {
            	    string_literal15=(Token)match(input,17,FOLLOW_17_in_term330); 
            	    string_literal15_tree = (Object)adaptor.create(string_literal15);
            	    adaptor.addChild(root_0, string_literal15_tree);

            	    pushFollow(FOLLOW_factor_in_term334);
            	    right=factor();

            	    state._fsp--;

            	    adaptor.addChild(root_0, right.getTree());
            	    retval.term = new ModNode(retval.term, (right!=null?right.factor:null));

            	    }
            	    break;
            	case 4 :
            	    // D:\\DropBox\\My Dropbox\\UVA\\SC\\Workspac\\Oberon0\\src\\ar\\oberon0\\grammar\\Oberon0.g:50:7: '&' right= factor
            	    {
            	    char_literal16=(Token)match(input,18,FOLLOW_18_in_term352); 
            	    char_literal16_tree = (Object)adaptor.create(char_literal16);
            	    adaptor.addChild(root_0, char_literal16_tree);

            	    pushFollow(FOLLOW_factor_in_term357);
            	    right=factor();

            	    state._fsp--;

            	    adaptor.addChild(root_0, right.getTree());
            	    retval.term = new AndNode(retval.term, (right!=null?right.factor:null));

            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);


            }


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "term"

    public static class simpleExpression_return extends ParserRuleReturnScope {
        public Interpretable simpleExpression;
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "simpleExpression"
    // D:\\DropBox\\My Dropbox\\UVA\\SC\\Workspac\\Oberon0\\src\\ar\\oberon0\\grammar\\Oberon0.g:55:1: simpleExpression returns [Interpretable simpleExpression] : ( '+' | '-' )? left= term ( '+' right= term | '-' right= term | 'OR' right= term )* ;
    public final Oberon0Parser.simpleExpression_return simpleExpression() throws RecognitionException {
        Oberon0Parser.simpleExpression_return retval = new Oberon0Parser.simpleExpression_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token char_literal17=null;
        Token char_literal18=null;
        Token char_literal19=null;
        Token char_literal20=null;
        Token string_literal21=null;
        Oberon0Parser.term_return left = null;

        Oberon0Parser.term_return right = null;


        Object char_literal17_tree=null;
        Object char_literal18_tree=null;
        Object char_literal19_tree=null;
        Object char_literal20_tree=null;
        Object string_literal21_tree=null;

        try {
            // D:\\DropBox\\My Dropbox\\UVA\\SC\\Workspac\\Oberon0\\src\\ar\\oberon0\\grammar\\Oberon0.g:56:2: ( ( '+' | '-' )? left= term ( '+' right= term | '-' right= term | 'OR' right= term )* )
            // D:\\DropBox\\My Dropbox\\UVA\\SC\\Workspac\\Oberon0\\src\\ar\\oberon0\\grammar\\Oberon0.g:56:18: ( '+' | '-' )? left= term ( '+' right= term | '-' right= term | 'OR' right= term )*
            {
            root_0 = (Object)adaptor.nil();

             boolean positive = true; 
            // D:\\DropBox\\My Dropbox\\UVA\\SC\\Workspac\\Oberon0\\src\\ar\\oberon0\\grammar\\Oberon0.g:57:3: ( '+' | '-' )?
            int alt4=3;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==19) ) {
                alt4=1;
            }
            else if ( (LA4_0==20) ) {
                alt4=2;
            }
            switch (alt4) {
                case 1 :
                    // D:\\DropBox\\My Dropbox\\UVA\\SC\\Workspac\\Oberon0\\src\\ar\\oberon0\\grammar\\Oberon0.g:57:5: '+'
                    {
                    char_literal17=(Token)match(input,19,FOLLOW_19_in_simpleExpression416); 
                    char_literal17_tree = (Object)adaptor.create(char_literal17);
                    adaptor.addChild(root_0, char_literal17_tree);


                    }
                    break;
                case 2 :
                    // D:\\DropBox\\My Dropbox\\UVA\\SC\\Workspac\\Oberon0\\src\\ar\\oberon0\\grammar\\Oberon0.g:58:5: '-'
                    {
                    char_literal18=(Token)match(input,20,FOLLOW_20_in_simpleExpression422); 
                    char_literal18_tree = (Object)adaptor.create(char_literal18);
                    adaptor.addChild(root_0, char_literal18_tree);

